# aasm

./: README  configure.ac  gperf-options.sh  meson.build
asm-sparc/: gen_opcodes.pl  instr.skel  meson.build  module.c  reg.c  reg.perf
asm-x86/: instr.c  instr.skel  module.c
debian/: changelog  rules
doc/: Makefile.am
extra/asm-skeleton/: asm.h  asm_process.c  gen_opcodes.pl  instr.skel  module.c
extra/out-skeleton/: Makefile.am  module.c  out_endian.c  out_reloc.c
in-parser/: Makefile.am
include/aasm/: info.h  mod_asm_import.h
libcore/: symbol.c
out-binary/: module.c
out-coff/: module.c
out-elf/: Makefile.am  module.c
out-src/: module.c
tests/aasm/: msg.test  objdump.test
tests/aasm/tests_addr/: bss.hexdump.ok  bss.md5sum.ok  bss.objdump.ok  instr_addr.md5sum.ok  instr_addr.objdump.ok  instr_boundary.aam  instr_boundary.hexdump.ok  macro_1label_last.objdump.ok  macro_label_last.aam  proc_addr.md5sum.ok  proc_align.md5sum.ok  proc_align.objdump.ok
tests/aasm/tests_expr/: already_def.msg.ok  expr_param_err.msg.ok  macro.md5sum.ok  shadow_sym.aam  shadow_sym.hexdump.ok  shadow_sym.md5sum.ok  shadow_sym.msg.ok  undef_sym.aam  undef_sym.msg.ok  unused_sym.aam
tests/aasm/tests_obj/: empty.msg.ok  empty_code.objdump.ok
tests/aasm/tests_oper/: arith.hexdump.ok  arith.md5sum.ok  err_fit.aam  err_overflow.aam  err_size.aam  logic.aam  logic.hexdump.ok  shift.md5sum.ok
tests/asm-sparc/: objdump.test  objdump_v9.test  readelf.test
tests/asm-sparc/tests_opcodes/: arch.aam  arith.md5sum.ok  arith.objdump.ok  branch.objdump.ok  float.md5sum.ok  float_v9.aam  float_v9.objdump_v9.ok  load_v9.aam  load_v9.md5sum.ok  load_v9.objdump_v9.ok  logic.md5sum.ok  logic_v9.md5sum.ok  misc.aam  misc.md5sum.ok  rdrw.md5sum.ok  rdrw_v9.aam  store.md5sum.ok  store.objdump.ok  synthetic.aam  synthetic_v9.aam  synthetic_v9.md5sum.ok
tests/asm-sparc/tests_relocs/: immediate.aam  immediate.md5sum.ok  immediate.objdump.ok  immediate_err.aam  reloc_extern.aam  reloc_extern.readelf.ok  reloc_label.aam  reloc_label.md5sum.ok  reloc_label.readelf.ok  reloc_labelsub.md5sum.ok  reloc_labelsub.objdump.ok  reloc_mask.aam  reloc_mask.objdump.ok
tests/asm-x86/: md5sum.test  ndisasm32.test
tests/asm-x86/tests_error/: invalid_addr.aam  invalid_form.aam  invalid_form.msg.ok  invalid_scale.aam  invalid_scale.msg.ok  invalid_scale_reloc.aam
tests/asm-x86/tests_opcodes/: 3dnow.aam  all.aam  all.md5sum.ok  all.objdump.ok  all16.aam  all16.md5sum.ok  fpu.md5sum.ok  mem.aam  mem.objdump.ok  mem_size.ndisasm32.ok  mem_size.objdump.ok  mmx_ext.aam  mmx_ext.ndisasm32.ok  mmx_ext.objdump.ok  reloc.md5sum.ok  reloc.ndisasm32.ok  reloc.objdump.ok  sse.md5sum.ok  sse2.md5sum.ok
tests/asm-x86/tests_warn/: disp_size.aam  reloc.aam  reloc.msg.ok  size_warn.msg.ok  undef_mode.aam
tests/in-parser/: test
tests/in-parser/tests_parse/: build_expr.hexdump.ok  err_label.msg.ok  err_mac.aam  err_num.msg.ok  err_scan.aam  err_scan.msg.ok  fill.aam  fill.md5sum.ok  inc_a.aam  inc_a.msg.ok  num_quote.aam  pad.hexdump.ok  parse_label.aam  parse_label.md5sum.ok  scan.aam  scan.hexdump.ok  std_label.aam  std_label.md5sum.ok  std_label.msg.ok
tests/in-parser/tests_scope/: err_extra_end.aam  err_extra_end.msg.ok  err_macro_already.aam  err_macro_noend.aam  err_macro_noend.msg.ok  err_macro_noend2.aam  err_proc_macro.aam  err_proc_macro.msg.ok  err_proc_noend.aam  err_proc_noend.msg.ok  err_proc_section.aam  err_section.aam  err_section_noend.aam  err_section_noend.msg.ok
tests/out-coff/: md5sum.test  test.sh
tests/out-coff/tests_format/: align_gnu.aam  align_gnu.objdump.ok  align_ms.aam  align_ms.md5sum.ok  align_ms.objdump.ok  bss.objdump.ok  extern_gnu.md5sum.ok  extern_ms.aam  extern_ms.objdump.ok  reloc_gnu.aam  reloc_gnu.md5sum.ok  reloc_rel_gnu.md5sum.ok  reloc_rel_gnu.objdump.ok  reloc_rel_ms.aam  reloc_sec_ms.md5sum.ok  reloc_sec_ms.objdump.ok  sym_gnu.aam  sym_gnu.md5sum.ok
tests/out-elf/: objdump.test
tests/out-elf/tests_format/: align.aam  align.md5sum.ok  align.objdump.ok  bss.objdump.ok  bss.readelf.ok  comment.objdump.ok  comment.readelf.ok  extern.aam  extern.objdump.ok  extern.readelf.ok  reloc.md5sum.ok  reloc.objdump.ok  reloc.readelf.ok  reloc_rel.aam  reloc_sec.objdump.ok  sym.aam  sym.objdump.ok  sym.readelf.ok  sym_dup_ext.aam  sym_dup_ext.objdump.ok  sym_dup_ext.readelf.ok
tests/out-elf/tests_msg/: err_align.aam  err_align.msg.ok  err_sym_dup.msg.ok  warn_align.msg.ok  warn_base.aam
trunk/: Makefile.am  configure.ac
trunk/aasm/: main.c
trunk/asm-sparc/: Makefile.am  asm_process.c  instr.c
trunk/asm-x86/: Makefile.am  reg.c
trunk/debian/: changelog  control  rules
trunk/extra/: aasm.el
trunk/extra/asm-skeleton/: Makefile.am  asm.c  asm_help.c  module.c  opcodes.list  reg.perf
trunk/extra/out-skeleton/: module.c  out.c  out.h  out_arch.c  out_reloc.c  out_sections.c  out_symbols.c
trunk/in-parser/: directive.perf  module.c  operator.perf
trunk/include/aasm/: info.h
trunk/libcore/: oper_b_xor.c
trunk/out-elf/: elf.c
trunk/out-intelhex/: module.c
trunk/out-src/: src.c
trunk/tests/: Makefile.am
trunk/tests/aasm/: hexdump.test  readelf.test
trunk/tests/aasm/tests_addr/: bss.aam  instr_addr.aam  instr_addr.hexdump.ok  instr_boundary.md5sum.ok  instr_boundary.objdump.ok  instr_offset.aam  instr_offset.hexdump.ok  instr_offset.md5sum.ok  instr_offset.objdump.ok  labels.aam  labels.md5sum.ok  labels.objdump.ok  macro_1label_last.aam  macro_1label_last.hexdump.ok  macro_1label_last.md5sum.ok  macro_label_last.hexdump.ok  macro_label_last.md5sum.ok  macro_label_last.objdump.ok  proc_addr.aam  proc_addr.objdump.ok  proc_align.aam  proc_align.hexdump.ok
trunk/tests/aasm/tests_expr/: already_def.aam  expr_param.aam  expr_param.md5sum.ok  expr_param.objdump.ok  expr_param_err.aam  macro.aam  macro.objdump.ok  symloop.aam  symloop.msg.ok  unused_sym.msg.ok
trunk/tests/asm-sparc/: test.sh
trunk/tests/asm-x86/: help.test  ndisasm16.test  objdump.test
trunk/tests/out-coff/: objdump.test
trunk/tests/out-elf/: Makefile.am  md5sum.test  test.sh
(+148 files in other folders)
